# dispenser_raspi

./: .gitignore  main.py  pyproject.toml
src/dispenser_carwash/: main.py
src/dispenser_carwash/application/: detect_vehicle_uc.py  fetch_vehicle_queue_info_uc.py  generate_ticket_uc.py  get_initial_data.py  listen_to_service_uc.py  open_gate_uc.py  play_prompt_sound_uc.py  print_ticket_uc.py  register_ticket_uc.py  select_service_uc.py  set_device_indicator_status_uc.py
src/dispenser_carwash/boot/: composition_root.py  runtime.py
src/dispenser_carwash/config/: settings.py
src/dispenser_carwash/domain/: exception.py
src/dispenser_carwash/domain/entities/: device.py  last_ticket_number.py  service_type.py  ticket.py  vehicle_queue.py
src/dispenser_carwash/hardware/: input_bool.py  printer.py  sound.py
src/dispenser_carwash/infra/: mappers.py
src/dispenser_carwash/processes/: main_process.py
src/dispenser_carwash/utils/: logger.py
src/dispenser_carwash/worker/: dto.py  indicator_worker.py  network_worker.py  primary_worker.py
src/dispenser_parkir/: main.py
src/dispenser_parkir/config/: settings.py
src/dispenser_parkir/hardware/: printer.py
src/dispenser_parkir/processes/: main_process.py
src/dispenser_parkir/utils/: logger.py
src/infra/: http_client.py  mappers.py
src/infra/hardware/: out_bool.py  printer.py  sound.py
src/infra/repositories/: service_type_repo.py  ticket_repo.py
tests/domain/entities/: test_device.py  test_service_type.py  test_ticket.py
tests/usecase/: test_generate_ticket.py
(+17 files in other folders)
