[project]
name = "dispenser_carwash"
version = "0.1.0"
description = "Dispenser controller for carwash drive thru"
authors = [{name = "Sian", email = "csiantika@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "python-escpos>=3.1", 
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]


[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

# -------------------------------
# Tool configurations (minimal)
# -------------------------------
[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
