[project]
name = "dispenser_carwash"
version = "0.1.0"
description = "Dispenser controller for carwash drive thru"
authors = [{name = "Sian", email = "csiantika@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "python-escpos>=3.1",
    "gpiozero>=2.0.1",
    "requests >= 2.32.5",
    "httpx==0.28.1",
]

# Dependensi tambahan untuk development
[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

# -------------------------------
# Tool configurations (minimal)
# -------------------------------
[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
